# gcheck

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENCE  Makefile  README.md  argument.cpp  argument.h  beautify.py  console_writer.cpp  console_writer.h  gcheck-dev.code-workspace  gcheck.cpp  gcheck.h  json.cpp  json.h  redirectors.cpp  redirectors.h  sfinae.h  testtest  testtest.cpp  user_object.cpp  user_object.h  utility.cpp  utility.h  vars.make
include/: deleter.h  function_test.h  io_test.h  method_io_test.h  method_test.h  sfinae.h  tests.h  user_object.h
include/gcheck/: argument.h  customtest.h  deleter.h  function_test.h  gcheck.h  io_test.h  json.h  macrotools.h  method_io_test.h  method_test.h  multi_processing.h  multiprocessing.h  ptr_tools.h  redirectors.h  sfinae.h  shared_allocator.h  stringify.h  tests.h  user_object.h
src/: argument.cpp  console_writer.cpp  console_writer.h  customtest.cpp  gcheck.cpp  json.cpp  multiprocessing.cpp  redirectors.cpp  shared_allocator.cpp  stringify.cpp  user_object.cpp
templates/: README  README.md  condition.html  horizontal.html  main.html  testbody.html  vertical.html
tests/: Makefile  common.make  testtest.cpp  utils.py  vars.make
tests/function_test/: Makefile  function_test.cpp  test.py
tests/io_test/: Makefile  io_test.cpp
tests/prerequisite/: Makefile  prerequisite.cpp
tools/: beautify.py  filter.py  report_parser.py
